--- a/config/database.yml
+++ b/config/database.yml
@@ -5,21 +5,26 @@
 #   gem "sqlite3"
 #
 default: &default
-  adapter: sqlite3
+  adapter: postgresql
+  encoding: unicode
+
+  host: <%= ENV.fetch("DATABASE_HOST")%>
+  port: 5432
+  username: <%= ENV.fetch("DATABASE_USERNAME")%>
+  password: <%= ENV.fetch("DATABASE_PASSWORD") %>
   pool: <%= ENV.fetch("RAILS_MAX_THREADS") { 5 } %>
-  timeout: 5000
 
 development:
   <<: *default
-  database: db/development.sqlite3
+  database: Souper_development
 
 # Warning: The database defined as "test" will be erased and
 # re-generated from your development database when you run "rake".
 # Do not set this db to the same as development or production.
 test:
   <<: *default
-  database: db/test.sqlite3
+  database: Souper_test
 
 production:
   <<: *default
-  database: db/production.sqlite3
+  database: Souper_production
