--- a/compose.yml
+++ b/compose.yml
@@ -20,6 +20,9 @@ services:
       - "3000:3000"
     depends_on:
       - db
+      - redis
+    links:
+      - redis
     environment:
       - DB_HOST=db
       - DB_USERNAME=postgres
