--- a/compose.yml
+++ b/compose.yml
@@ -13,7 +13,7 @@ services:
 
   web:
     build: .
-    command: bash -c "rm -f tmp/pids/server.pid && rails db:create && rails db:migrate && bundle exec rails s -p 3000 -b '0.0.0.0'"
+    command: bash -c "rm -f tmp/pids/server.pid && chmod +x setup.sh && ./setup.sh"
     volumes:
       - .:/app
     ports:
