--- a/.example.env
+++ b/.example.env
@@ -2,6 +2,8 @@ LINE_CHANNEL_ID="YOUR LINE_CHANNEL_ID"
 LINE_CHANNEL_SECRET="YOUR LINE_CHANNEL_SECRET"
 LINE_CHANNEL_ACCESS_TOKEN="YOUR LINE_CHANNEL_ACCESS_TOKEN"
 
+OPENAI_ACCESS_TOKEN="YOUR OPENAI_ACCESS_TOKEN"
+
 DATABASE_USERNAME=postgres
 DATABASE_PASSWORD=postgres
 DATABASE_HOST=db
