Add OpenAI for game and update .example.env

--- a/.example.env
+++ b/.example.env
@@ -3,6 +3,8 @@ LINE_CHANNEL_SECRET="YOUR LINE_CHANNEL_SECRET"
 LINE_CHANNEL_ACCESS_TOKEN="YOUR LINE_CHANNEL_ACCESS_TOKEN"
 
 OPENAI_ACCESS_TOKEN="YOUR OPENAI_ACCESS_TOKEN"
+AI_MODEL="gpt-3.5-turbo"
+
 
 DATABASE_USERNAME=postgres
 DATABASE_PASSWORD=postgres
