--- a/compose.yml
+++ b/compose.yml
@@ -15,7 +15,8 @@ services:
     build: .
     command: bash -c "rm -f tmp/pids/server.pid && chmod +x setup.sh && ./setup.sh"
     volumes:
-      - .:/app
+      - ./app:/app/app
+      - ./db:/app/db
     ports:
       - "3000:3000"
     depends_on:
@@ -26,3 +27,13 @@ services:
     environment:
       - DB_HOST=db
       - DB_USERNAME=postgres
+
+  frontend:
+    build: ./client
+    volumes:
+      - ./client/src:/app/src
+      - ./client/index.html:/app/index.html
+      - ./client/public:/app/public
+    command: npm run dev
+    ports:
+      - "5173:5173"
